<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/forget_password_bg"
        tools:context=".features.forget_password.NewPasswordActivity">

    <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.93"
            android:background="@color/colorWhite" />

    <ImageView
            android:id="@+id/imageView_forgetPasswordLogo2"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_70sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:src="@drawable/forget_password_logo_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <com.yrc.pos.core.views.YrcTextView
            android:id="@+id/textView_resetYourPassword"
            style="@style/ForgetPasswordItsOkayTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/reset_your_password"
            app:fontType="Regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView_forgetPasswordLogo2" />

    <com.yrc.pos.core.views.YrcTextView
            android:id="@+id/textView_codeInstructions1"
            style="@style/ForgetPasswordCodeInstructsTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/code_instructions"
            app:fontType="Light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_resetYourPassword" />

    <com.yrc.pos.core.views.YrcTextView
            android:id="@+id/textView_codeInstructions2"
            style="@style/ForgetPasswordCodeInstructsTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/on_your_email"
            app:fontType="Light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_codeInstructions1" />

    <com.yrc.pos.core.views.YrcTextView
            android:id="@+id/textView_sendMeAgain"
            style="@style/ForgetPasswordCodeInstructsTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/send_me_again"
            android:onClick="onSendOtpAgainClicked"
            app:fontType="Light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_codeInstructions2" />

    <com.yrc.pos.core.views.YrcLoginEditText
            android:id="@+id/editText_otpCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:gravity="center"
            android:hint="@string/enter_four_digit_code"
            android:inputType="numberDecimal"
            android:maxLength="6"
            app:editTextTheme="Green"
            app:fontType="Light"
            app:layout_constraintTop_toBottomOf="@+id/textView_sendMeAgain" />

    <com.yrc.pos.core.views.YrcLoginEditText
            android:id="@+id/editText_newPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:maxLength="25"
            app:editTextTheme="Green"
            app:fontType="Light"
            app:showPasswordToggle="true"
            app:layout_constraintTop_toBottomOf="@+id/editText_otpCode" />

    <com.yrc.pos.core.views.YrcLoginEditText
            android:id="@+id/editText_confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:maxLength="25"
            app:editTextTheme="Green"
            app:fontType="Light"
            app:showPasswordToggle="true"
            app:layout_constraintTop_toBottomOf="@+id/editText_newPassword" />

    <com.yrc.pos.core.views.YrcButton
            style="@style/ForgetPasswordButtonStyle"
            android:layout_width="@dimen/_160sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:onClick="onResetPasswordClicked"
            android:text="@string/reset_password"
            app:fontType="Regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_confirmPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>