<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/forget_password_bg"
        tools:context=".features.forget_password.ForgetPasswordActivity">

    <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorWhite"
            android:alpha="0.93"/>

    <ImageView
            android:id="@+id/imageView_forgetPasswordLogo1"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_70sdp"
            android:src="@drawable/forget_password_logo_1"
            android:layout_marginTop="@dimen/_50sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <com.yrc.pos.core.views.YrcTextView
            style="@style/ForgetPasswordItsOkayTextStyle"
            android:id="@+id/textView_itsOkay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/its_okay"
            android:layout_marginTop="@dimen/_35sdp"
            app:fontType="Regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView_forgetPasswordLogo1" />

    <com.yrc.pos.core.views.YrcTextView
            style="@style/ForgetPasswordItsOkayTextStyle"
            android:id="@+id/textView_resetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_your_password"
            app:fontType="Regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_itsOkay" />

    <com.yrc.pos.core.views.YrcLoginEditText
            android:id="@+id/editText_emailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:gravity="center"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginHorizontal="@dimen/_30sdp"
            android:maxLength="35"
            app:fontType="Light"
            app:editTextTheme="Green"
            app:layout_constraintTop_toBottomOf="@+id/textView_resetPassword" />

    <com.yrc.pos.core.views.YrcButton
            style="@style/ForgetPasswordButtonStyle"
            android:layout_width="@dimen/_130sdp"
            android:layout_height="@dimen/_35sdp"
            android:text="@string/continue_"
            android:layout_marginTop="@dimen/_30sdp"
            android:onClick="onContinueButtonClicked"
            app:fontType="Regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_emailAddress"/>

</androidx.constraintlayout.widget.ConstraintLayout>