<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/forget_password_bg"
        tools:context=".features.forget_password.PasswordResetStatusActivity">

    <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorWhite"
            android:alpha="0.93"/>

    <ImageView
            android:id="@+id/imageView_forgetPasswordLogo3"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_70sdp"
            android:src="@drawable/forget_password_logo_3"
            android:layout_marginTop="@dimen/_50sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <com.yrc.pos.core.views.YrcTextView
            style="@style/ForgetPasswordItsOkayTextStyle"
            android:id="@+id/textView_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done"
            android:layout_marginTop="@dimen/_20sdp"
            app:fontType="Regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView_forgetPasswordLogo3"/>

    <com.yrc.pos.core.views.YrcTextView
            style="@style/ForgetPasswordCodeInstructsTextStyle"
            android:id="@+id/textView_resetInstructions1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_password_has_reset"
            android:textColor="@color/colorGreenMedium"
            android:layout_marginTop="@dimen/_5sdp"
            app:fontType="Light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_done"/>

    <com.yrc.pos.core.views.YrcTextView
            style="@style/ForgetPasswordCodeInstructsTextStyle"
            android:id="@+id/textView_resetInstructions2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_with_new_password"
            android:textColor="@color/colorGreenMedium"
            app:fontType="Light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_resetInstructions1"/>

    <com.yrc.pos.core.views.YrcButton
            style="@style/ForgetPasswordButtonStyle"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_35sdp"
            android:text="@string/login"
            android:layout_marginTop="@dimen/_40sdp"
            android:onClick="onLoginButtonClicked"
            app:fontType="Regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_resetInstructions2"/>

</androidx.constraintlayout.widget.ConstraintLayout>