<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="@dimen/_20sdp"
        android:background="@drawable/hello_screen_bg"
        tools:context=".features.signup.HelloUserActivity">

    <ImageView
            android:id="@+id/imageView_robot"
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_130sdp"
            android:src="@drawable/robot_image"
            android:layout_marginRight="@dimen/_9sdp"
            android:scaleType="fitEnd"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@+id/editText_userName"
            app:layout_constraintBottom_toTopOf="@+id/editText_userName"/>

    <ImageView
            android:id="@+id/imageView_helloBubble"
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_65sdp"
            android:scaleType="fitEnd"
            android:layout_marginBottom="@dimen/_15sdp"
            android:visibility="invisible"
            android:src="@drawable/hello_bubble_image"
            app:layout_constraintEnd_toStartOf="@+id/imageView_robot"
            app:layout_constraintBottom_toTopOf="@+id/textView_what"/>

    <com.yrc.pos.core.views.YrcTextView
            style="@style/WhatsYourNameTextStyle"
            android:id="@+id/textView_what"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/what"
            android:layout_marginRight="@dimen/_8sdp"
            android:visibility="invisible"
            app:fontType="Regular"
            app:layout_constraintEnd_toStartOf="@+id/imageView_robot"
            app:layout_constraintBottom_toTopOf="@+id/textView_IsYourName"/>

    <com.yrc.pos.core.views.YrcTextView
            style="@style/WhatsYourNameTextStyle"
            android:id="@+id/textView_IsYourName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/is_your_good_name"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_8sdp"
            android:visibility="invisible"
            app:fontType="Regular"
            app:layout_constraintEnd_toStartOf="@+id/imageView_robot"
            app:layout_constraintBottom_toTopOf="@+id/editText_userName"/>

    <com.yrc.pos.core.views.YrcLoginEditText
            android:id="@+id/editText_userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/please_enter_name"
            android:inputType="textCapWords"
            android:gravity="center"
            android:maxLength="12"
            android:visibility="invisible"
            app:fontType="Light"
            app:showCounter="true"
            app:editTextTheme="Green"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <com.yrc.pos.core.views.YrcButton
            style="@style/ForgetPasswordButtonStyle"
            android:id="@+id/button_enter"
            android:layout_width="@dimen/_130sdp"
            android:layout_height="@dimen/_32sdp"
            android:text="@string/enter"
            android:layout_marginTop="@dimen/_40sdp"
            android:visibility="invisible"
            android:onClick="onEnterButtonClicked"
            app:fontType="Regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_userName"/>

</androidx.constraintlayout.widget.ConstraintLayout>