<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/_10sdp"
        android:background="@drawable/light_screen_background"
        tools:context=".features.signup.SignupActivity">

    <ImageView
        android:id="@+id/imageView_hambaLogo"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_120sdp"
        android:layout_marginTop="32dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.yrc.pos.core.views.YrcTextView
            android:id="@+id/textView_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:text="@string/welcome_to_yrc"
            android:textSize="@dimen/_14sdp"
            android:visibility="invisible"
            app:fontType="Regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView_hambaLogo" />

    <com.yrc.pos.core.views.YrcTextView
        android:id="@+id/textView_phoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/phone_number"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_14sdp"
        android:visibility="invisible"
        app:fontType="Regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_welcome" />

    <com.yrc.pos.core.views.YrcMobileNumberComponent
            android:id="@+id/individualSignUp_mobileNumberComponent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            app:editTextTheme="Green"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_phoneNumber" />

    <com.yrc.pos.core.views.YrcButton
            style="@style/SignupButtonStyle"
            android:id="@+id/button_signUp"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_33sdp"
            android:text="@string/sign_up"
            android:onClick="onSignUpButtonClicked"
            android:layout_marginTop="@dimen/_25sdp"
            app:fontType="Regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/individualSignUp_mobileNumberComponent"/>

    <com.yrc.pos.core.views.YrcTextView
            android:id="@+id/textView_orLoginWith"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorGreenDark"
            android:text="@string/or"
            android:textSize="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_30sdp"
            app:fontType="Regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_signUp" />

    <com.yrc.pos.core.views.GmailLoginButton
            android:id="@+id/signUpWithGmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25sdp"
            android:onClick="onSignUpWithGmailClicked"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_orLoginWith"/>

</androidx.constraintlayout.widget.ConstraintLayout>